# fetch-plugin

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: nightly-oras.yml  nightly.yml  release-oras.yml  release.yml
src/: lib.rs  types.rs
