[package]
name = "fetch"
version = "0.1.3"
edition = "2024"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
git-version = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-serde = "0.8"
base64 = "0.22"
htmd = "0.1"

[package.metadata.release]
publish = false
push = true
tag = true
tag-name = "v{{version}}"
